DIAC-663 - Updated Grounds of Deprivation list and removed unused ones following update